// Messages inserted into the master's paxos log

syntax = "proto3";

import "common.proto";

package proto.paxos.master;

message NewKeySpaceSelected {
  string slave_group_id = 1;
  repeated proto.common.KeySpaceRange new_ranges = 2;
  uint32 generation = 3;
}

message KeySpaceCommit {
  string slave_group_id = 1;
  uint32 generation = 2;
}

message FirstConfigSelected {
  repeated string new_slaves = 1;
  uint32 generation = 2;
}

message FirstConfigCommitted {
  repeated string new_slaves = 1;
  uint32 generation = 2;
}
